--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,9 @@
+:root,
+[data-theme="dark"] {
+  --background: var(--card);
+  --container-max: 100%;
+}
+
 .input-section {
   margin-bottom: 1rem;
 }
